[monarch] refactor monarch/ callsites to use monarch.actor
as title

Differential Revision: [D77823401](https://our.internmc.facebook.com/intern/diff/D77823401/)

[ghstack-poisoned]

--- a/examples/notebooks/ping_pong.ipynb
+++ b/examples/notebooks/ping_pong.ipynb
@@ -16,7 +16,7 @@
             "metadata": {},
             "source": [
                 "## Hello World\n",
-                "Actors are spawned in Process meshes via the `monarch.proc_mesh` API. For those familiar with distributed systems, it can be helpful to think of each Actor as a server with endpoints that can be called."
+                "Actors are spawned in Process meshes via the `monarch.actor` API. For those familiar with distributed systems, it can be helpful to think of each Actor as a server with endpoints that can be called."
             ]
         },
         {
@@ -43,8 +43,8 @@
             "source": [
                 "import asyncio\n",
                 "\n",
-                "from monarch.proc_mesh import proc_mesh, ProcMesh\n",
-                "from monarch.actor_mesh import Actor, endpoint, current_rank\n",
+                "from monarch.actor import proc_mesh, ProcMesh\n",
+                "from monarch.actor import Actor, endpoint, current_rank\n",
                 "\n",
                 "NUM_ACTORS=4\n",
                 "\n",
@@ -168,8 +168,8 @@
             "source": [
                 "import asyncio\n",
                 "\n",
-                "from monarch.proc_mesh import proc_mesh, ProcMesh\n",
-                "from monarch.actor_mesh import Actor, endpoint, current_rank\n",
+                "from monarch.actor import proc_mesh, ProcMesh\n",
+                "from monarch.actor import Actor, endpoint, current_rank\n",
                 "\n",
                 "class ExampleActor(Actor):\n",
                 "    def __init__(self, actor_name):\n",
