--- a/examples/notebooks/spmd_ddp.ipynb
+++ b/examples/notebooks/spmd_ddp.ipynb
@@ -24,8 +24,8 @@
                 "import torch.nn as nn\n",
                 "import torch.optim as optim\n",
                 "\n",
-                "from monarch.proc_mesh import proc_mesh\n",
-                "from monarch.actor_mesh import Actor, current_rank, endpoint\n",
+                "from monarch.actor import proc_mesh\n",
+                "from monarch.actor import Actor, current_rank, endpoint\n",
                 "\n",
                 "from torch.nn.parallel import DistributedDataParallel as DDP\n",
                 "\n",
